# FCC-CHECK

./: .breakpoints  .cache  .gitignore  .replit  LICENSE  Main.py  README.md  Supplemental.py  bad_words.txt  banned.txt  design.py  design.ui  designprocess.txt  pyproject.toml  scrapcode.py  ui_mainwindow.py
src/: FilterCheckApplication.py
src/authorization/: spotifyUserAuthoriation.py
src/controller/: Main.py
src/model/: Supplemental.py  song.py
