[tool.poetry]
name = "fcc-check"
version = "0.1.0"
description = ""
authors = ["Jylah <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
lyricsgenius = "^3.0.1"
re101 = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
